# Strife.ML

./: .gitmodules  CMakeLists.txt  LICENSE.txt
src/: AICommon.hpp  CMakeLists.txt  Decider.hpp  ExperienceManager.hpp  MlUtil.hpp  NetworkContext.hpp  NeuralNetwork.hpp  NewStuff.cpp  NewStuff.hpp  Sample.hpp  SampleRepository.hpp  ScriptNetwork.cpp  ScriptNetwork.hpp  Serialization.hpp  StrifeML.cpp  StrifeML.hpp  TensorPacking.hpp  TorchApi.cpp  TorchApi.h  TorchApiInternal.hpp  Trainer.hpp
src/Scripting/: ScriptCompiler.cpp  ScriptCompiler.hpp  Scripting.cpp  Scripting.hpp
